# OpenFLASH

./: .Dockerfile  .gitignore  .gitmodules  CITATION.cff  LICENSE  MANIFEST.in  README.md  calkit.yaml  debug_log.txt  dvc.yaml  environment.yml  generated_A.npy  index.html  meem_hydro_results_full.nc  paper.bib  paper.md  pyproject.toml  release.sh  requirements.txt  setup.py
.calkit/: overleaf-sync.json
.calkit/env-locks/: jfm.txt  tex.json
.calkit/runs/: 2026-06-09T17-02-38-69eae373754b4423a49d7179d8f49c69.json  2026-06-13T03-38-49-767bece6d84d42869978081e184185f8.json  2026-06-13T16-50-57-8970e80a28454df48447763fd923c920.json  2026-06-13T17-25-17-9d9df9e4e6684c8fb9d1c4ab4d241c49.json  2026-06-13T17-32-53-b2a98895b1eb49efab67959e714bbf78.json  2026-06-13T17-40-28-25f47799b7f64626a218fb3604289e9d.json  2026-06-14T18-30-05-e1b28a74572944adba07f78dd9a76cbf.json  2026-06-15T01-03-01-1a12874a92e44d279d69247fb46155e7.json  2026-06-15T01-16-52-85e84c4dd1ad4d2984b84cac88aac0d2.json  2026-06-15T01-39-11-8dfa13da983740e88e9c658583dce04c.json  2026-06-15T01-49-41-4d15476dbb814e90afdc5a3ea8ddd1ec.json  2026-06-15T03-00-05-72c04e748e4e4b0f86dea166e9789d69.json  2026-06-15T21-35-51-da008441b6dc493297c010fb212c7213.json
.devcontainer/: devcontainer.json
.dvc/: config
.github/: codecov.yml
.github/workflows/: .secrets  calkit-run.yml  calkit_pull_with_retries.sh  ci.yml  deploy-docs.yml  draft-pdf.yml  pr-tagging.yml  publish-package.yml  tag-build-publish.yml
analysis/: .Dockerfile  capytaine_generator.py  convergence-results.ipynb  data.dvc  environment-branch.yml  environment-dev.yml  environment-main.yml  low_m0_plots.ipynb  make_fig.py  reuse_bessel.ipynb  slant_data_generation.ipynb  slant_data_plots.ipynb  sparsity_plots.ipynb  test-latex.ipynb  timing_data_generation.ipynb  timing_plots.ipynb  validation_with_capytaine_plots.ipynb
analysis/sea-lab-utils/: README.md  git-viz.sh  unpushed.sh
conda-recipe/: build_env.yaml  meem_hydro_results_full.nc  meta.yaml  meta.yaml.bak
debug_results/: DEBUG_big_bicylinder_inc_regenerated_v2.csv  DEBUG_big_bicylinder_regenerated_v2.csv  DEBUG_big_tricylinder_inc_regenerated_v2.csv  DEBUG_big_tricylinder_regenerated_v2.csv  DEBUG_mini_bicylinder_inc_regenerated_v2.csv  DEBUG_mini_bicylinder_regenerated_v2.csv  DEBUG_mini_tricylinder_inc_regenerated_v2.csv  DEBUG_mini_tricylinder_regenerated_v2.csv  DEBUG_small_bicylinder_inc_regenerated_v2.csv  DEBUG_small_bicylinder_regenerated_v2.csv  DEBUG_small_tricylinder_inc_regenerated_v2.csv  DEBUG_small_tricylinder_regenerated_v2.csv
dev/python/: capytaine_generator.py  low_m0_MEEM.ipynb  multi_MEEM.ipynb  multi_condensed.py  multi_constants.py  multi_equations.py  old_assembly.py  timing_for_paper.ipynb  validation_with_capytaine_plots.ipynb
docs/: app.py  app.rst  app_walk.rst  basic_region_geometry.rst  citations.rst  conf.py  constants.rst  coupling.rst  domain.rst  equations.rst  example_results.nc  geometry.rst  index.rst  installation.rst  introduction.rst  meem_engine.rst  meem_problem.rst  meem_simulation_results.nc  multi_constants.rst  multi_equations.rst  problem_cache.rst  results.rst  tutorial.rst  tutorial_walk.ipynb  update_tutorial.py
docs/_static/: app_streamlit.html
docs/modules/: basic_region_geometry.rst  body.rst  domain.rst  geometry.rst  index.rst  meem_engine.rst  meem_problem.rst  multi_equations.rst  problem_cache.rst  results.rst
hydro/python/: low_m0_MEEM.ipynb  multi_MEEM.ipynb  multi_condensed.py  multi_constants.py  multi_equations.py  old_assembly.py
hydro/values/: b.txt
matlab/dev/: MEEM_many_region.m
matlab/src/: run_MEEM.m
matlab/test/: test_MEEM.m
new_env/: pyvenv.cfg
output/netcdf/: example_results.nc
package/: domain.py  geometry.py  meem_engine.py  meem_problem.py
package/src/: _init_.py  constants.py  coupling.py  domain.py  equations.py  geometry.py  meem_engine.py  meem_problem.py  multi_constants.py  multi_equations.py  problem_cache.py  results.py
package/test/: A_match_check.txt  A_values_openflash.csv  OpenFLASH.ipynb  b_match.txt  benchmark_openflash_vs_capytaine.py  capytaine_test.py  debug_all_heaving.py  debug_case1_vs_case2.py  domain_example.py  example_results.nc  generate_snapshot.py  generated_b.npy  geometry_example.py  inspect_headers.py  main_test.py  meem_engine_example.py  meem_hydro_results.nc  meem_hydro_results_full.nc  meem_problem_example.py  openflash_utils.py  plot_matrix_sparsity.py  plot_robustness.py  radiation_result_details.txt  read_results_example.py  reference_2region.py  regenerate_benchmarks_v2.py  results_example.py  test.py  test_adjacency.py  test_b_vector_variants.py  test_basic_region_geometry.py  test_bem_comparison.py  test_benchmark_comparison.py  test_bicylinder_convergence.py  test_body.py  (+35 more)
scripts/: compute_base.sh  create_rc_tag.sh
src/: MEEM.ipynb  MEEM.py  b.txt  b_match.txt  constants.py  coupling.py  equations.py
test-results/: junit.xml
(+534 files in other folders)
